--- a/components/a4jli8rnu-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/a4jli8rnu-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: a4jli8rnu-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-67c462e415.xt2a.p3.openshiftapps.com/rhtap/rhtap-qe:21a6cd050d0abd4eb94bbbe5fda0536fda9390b0@sha256:bce3dd7ae33c63e29a6553bc4854388abf6392086e7a5c1e0398325631f0b02b
+          name: container-image
